--- a/.github/workflows/nodejs-ci.yml
+++ b/.github/workflows/nodejs-ci.yml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [18.x]   # ✅ Only Node 18 (no 16.x)
+        node-version: '18'
 
     steps:
       - name: Checkout code
