--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "test": "jest",
-    "lint": "eslint ."
+    "test": "jest"
 
   },
   "keywords": [],
